code review for utils, milestone and assault